# lab1

./: CMakeLists.txt  main.c  test.c  test.h
headers/: complex.h  functions.h  math.h  matrix.h  menu.h
methods/: complex.c  functions.c  math.c  matrix.c  menu.c
